syntax = "proto3";
package pt.tecnico.grpc;

message RegisterRequest {
	string client = 1;
	uint32 balance = 2;
}

message RegisterResponse {
}

message ConsultRequest {
	string client = 1;
}

message ConsultResponse {
	int32 balance = 1;
}

message ZeroRequest {
	string client = 1;
}

message ZeroResponse {
	string success = 1;
}

service BankingService {
	rpc register(RegisterRequest) returns (RegisterResponse);
	rpc consult(ConsultRequest) returns (ConsultResponse);
	rpc zero(ZeroRequest) returns (ZeroResponse);
}
